# xgbcrew

./: Cargo.toml
helpers/: Cargo.toml
helpers/savestate/: Cargo.toml
helpers/savestate/src/: lib.rs
helpers/savestate_derive/: Cargo.toml
helpers/savestate_derive/src/: lib.rs
html/: audio-worklet.js  index.html
src/: address_space.rs  address_space_generic.rs  cpu.rs  cry-test.rs  io.rs  lib.rs  main.rs  rom.rs  sc.rs  sgb.rs  system_state.rs  ui.rs
src/address_space/: helpers.rs
src/cpu/: disasm.rs  insns.rs  macros.rs
src/cries/: base_cries.rs  mod.rs
src/io/: int.rs  ir.rs  keypad.rs  lcd.rs  serial.rs  sound.rs  timer.rs
src/io/sound/: functionality.rs
src/ui/: sc.rs  sdl.rs  web.rs
