[package]
name = "xgbcrew"
version = "0.1.0"
authors = ["Hanna Reitz <hanna@xanclic.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.2"
libc = "0.2.0"
paste = "0.1"
sdl2 = "0.32.2"
hidapi = "1.1.0"
savestate = { path = "helpers/savestate", version = "0" }
savestate_derive = { path = "helpers/savestate_derive", version = "0" }

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
overflow-checks = false
