[package]
name = "xgbcrew"
version = "0.5.0"
authors = ["Hanna Reitz <hanna@xanclic.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
libc = "0.2"
paste = "1.0"
regex = "1.11"
savestate = { path = "helpers/savestate", version = "0" }
savestate_derive = { path = "helpers/savestate_derive", version = "0" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hidapi = "2.6"
sdl2 = "0.37"
sdl2_ttf = { git = "https://github.com/XanClic/rust-sdl2_ttf" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
console_error_panic_hook = "0.1"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioContext",
    "AudioDestinationNode",
    "CanvasRenderingContext2d",
    "console",
    "Document",
    "Element",
    "EventListener",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "MouseEvent",
    "Storage",
    "Window",
]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
overflow-checks = false

[lib]
crate-type = ["cdylib"]
