[package]
name = "savestate_derive"
version = "0.1.0"
authors = ["Hanna Reitz <hanna@xanclic.moe>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
log = "0"
savestate = { path = "../savestate", version = "0" }
